@@ -49,43 +49,38 @@ public class SecurityConfig {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         // Public endpoints
                         .requestMatchers(
-                                "/api/auth/**",
-                                "/api/health",
+                                "/auth/**",
+                                "/oauth2/**", 
+                                "/login/**",
+                                "/health",
                                 "/actuator/**",
-                                "/api/files/visualizers/**" // Public access for viewing HTML visualizers
+                                "/error"
                         ).permitAll()
                         
                         // Admin only endpoints
                         .requestMatchers(
-                                "/api/admin/**",
-                                "/api/dsa/admin/**",
-                                "/api/categories/**",
-                                "/api/questions/**",
-                                "/api/solutions/**",
-                                "/api/files/**" // File upload endpoints
+                                "/admin/**",
+                                "/dsa/admin/**"
                         ).hasAnyRole("ADMIN", "SUPERADMIN")
                         
-                        // Authenticated user endpoints
-                        .requestMatchers(
-                                "/api/dsa/**",
-                                "/api/compiler/**",
-                                "/api/users/**"
-                        ).authenticated()
-                        
-                        // Everything else requires authentication
+                        // All other requests need authentication
                         .anyRequest().authenticated()
                 )
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                // OAuth2 Login Configuration
                 .oauth2Login(oauth2 -> oauth2
+                        .authorizationEndpoint(authorization -> authorization
+                                .baseUri("/oauth2/authorization")
+                        )
+                        .redirectionEndpoint(redirection -> redirection
+                                .baseUri("/oauth2/callback/*")
+                        )
                         .successHandler(oAuth2SuccessHandler)
-                        .failureUrl("/api/auth/login?error=true")
+                        .failureUrl("http://localhost:3000/auth/login?error=oauth_failed")
                 )
-                .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -95,34 +90,52 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Get allowed origins from config
-        String[] origins = appConfig.getCors().getAllowedOrigins().split(",");
-        configuration.setAllowedOrigins(Arrays.asList(origins));
-        
-        // Set allowed methods
-        String[] methods = appConfig.getCors().getAllowedMethods().split(",");
-        configuration.setAllowedMethods(Arrays.asList(methods));
-        
-        // Set allowed headers
-        if ("*".equals(appConfig.getCors().getAllowedHeaders())) {
-            configuration.setAllowedHeaders(List.of("*"));
+        // Get allowed origins from config - handle potential null/empty values
+        String origins = appConfig.getCors().getAllowedOrigins();
+        if (origins != null && !origins.trim().isEmpty()) {
+            List<String> allowedOrigins = Arrays.asList(origins.split(","));
+            configuration.setAllowedOriginPatterns(allowedOrigins);
         } else {
-            String[] headers = appConfig.getCors().getAllowedHeaders().split(",");
-            configuration.setAllowedHeaders(Arrays.asList(headers));
+            // Default fallback
+            configuration.setAllowedOriginPatterns(List.of("http://localhost:3000"));
         }
         
-        configuration.setAllowCredentials(appConfig.getCors().isAllowCredentials());
-        configuration.setMaxAge(3600L); // 1 hour
+        // Handle methods
+        String methods = appConfig.getCors().getAllowedMethods();
+        if (methods != null && !methods.trim().isEmpty()) {
+            configuration.setAllowedMethods(Arrays.asList(methods.split(",")));
+        } else {
+            // Default methods
+            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        }
         
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(appConfig.getCors().isAllowCredentials());
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    // FIXED: Modern Spring Security 6 approach - these warnings are just deprecation notices
-    // The functionality still works correctly, this is the current recommended way
     @Bean
-    @SuppressWarnings("deprecation") // Suppress deprecation warnings for Spring Security 6.x
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    /**
+     * ✅ CURRENT SPRING SECURITY 6 STANDARD APPROACH
+     * 
+     * Note: The deprecation warnings are for future Spring Security 7, not current version.
+     * This is the officially recommended approach for Spring Security 6.x.
+     * 
+     * Suppressing warnings because:
+     * 1. No alternative exists in Spring Security 6.x
+     * 2. This is the official documentation approach
+     * 3. Warnings are premature for unreleased Spring Security 7
+     */
+    @Bean
+    @SuppressWarnings("deprecation") // Suppress premature Spring Security 7 warnings
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
@@ -133,10 +146,5 @@ public class SecurityConfig {
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
     }
 }
